# Varjus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Varjus  Varjus.cpp  Varjus.sln  Varjus.vcxproj  Varjus.vcxproj.filters  build.ps1  cmake_install.cmake  globalDefinitions.hpp  globalEnums.hpp  main.cpp  packages.config
VarjusAPI/: CMakeLists.txt  build.ps1
VarjusAPI/include/varjus_api/: varjus_api.cpp  varjus_api.hpp
VarjusAPI/include/varjus_api/internal/: globalDefinitions.hpp  globalEnums.hpp  runtime.cpp  runtime.hpp  structure.cpp  structure.hpp  variables.cpp  variables.hpp
VarjusAPI/include/varjus_api/types/: array.cpp  array.hpp  boolean.cpp  boolean.hpp  callable.cpp  callable.hpp  default.cpp  default.hpp  double.cpp  double.hpp  integer.cpp  integer.hpp  object.cpp  object.hpp  string.cpp  string.hpp  types.hpp  uinteger.cpp  uinteger.hpp
api/: CMakeLists.txt  varjus_api.cpp  varjus_api.hpp
api/internal/: globalDefinitions.hpp  globalEnums.hpp  runtime.cpp  runtime.hpp  structure.cpp  structure.hpp  variables.cpp  variables.hpp
api/internal/pools/: object_pool_owning.hpp
api/types/: array.cpp  array.hpp  boolean.cpp  boolean.hpp  callable.cpp  callable.hpp  default.cpp  default.hpp  double.cpp  double.hpp  integer.cpp  integer.hpp  object.cpp  object.hpp  string.cpp  string.hpp  types.hpp  uinteger.cpp  uinteger.hpp
api/types/internal/: aggregate.cpp  aggregate.hpp  callbacks.cpp  callbacks.hpp  internal_objects.cpp  internal_objects.hpp  methods.cpp  methods.hpp  object_declarations.cpp  object_declarations.hpp  objects.cpp  objects.hpp
api/types/methods/: array_methods.cpp  object_methods.cpp  string_methods.cpp
api/types/operators/: coercion.cpp  coercion.hpp  default_operators.cpp  default_operators.hpp
api/types/std/: console.cpp  console.hpp  math.cpp  math.hpp
tests/all_tests/: BUILD_AND_RUN_TESTS.bat  CMakeLists.txt  algorithms.cpp  array.cpp  closures.cpp  coercion.cpp  composite_types.cpp  composite_types_as_variables.cpp  exceptions.cpp  expressions.cpp  fmt_strings.cpp  functions.cpp  global_variables.cpp  hoisting.cpp  modules.cpp  object.cpp  operators_additive.cpp  operators_assignment.cpp  operators_bitwise.cpp  operators_equality.cpp  operators_logical.cpp  operators_multiplicative.cpp  operators_relational.cpp  operators_shift.cpp  primitive_types.cpp  primitive_types_as_variables.cpp  shared_ownership.cpp  statements.cpp  t_algorithms.cpp  t_array.cpp  t_closures.cpp  t_coercion.cpp  t_composite_types.cpp  t_composite_types_as_variables.cpp  t_destructuring.cpp  t_exceptions.cpp  t_expressions.cpp  t_fmt_strings.cpp  t_functions.cpp  t_global_variables.cpp  (+24 more)
tests/all_tests/scripts/algorithms/: array_to_string.var  auto_complete.var  binary_search.var  counter.var  expression_evaluator.var  factorial.var  factorial_iterative.var  fibonacci.var  fibonacci_iterative.var  fractalgenerator.var  generate_parenthesis.var  is_palindrome.var  is_prime.var  kmp_string_match.var  max_sub_array.var  merge_sort.var  remove_duplicates.var  reverse_string.var  stress_test.var  sum_array.var
tests/all_tests/scripts/array/: accumulate.var  all.var  any.var  contains.var  fill.var  filter.var  find.var  find_index.var  find_last.var  find_last_index.var  for_each.var  join.var  map.var  pop.var  pop_front.var  push.var  push_front.var  resize_grow.var  resize_shrink.var  reverse.var  reversed.var  slice.var  sort.var  transform.var
tests/all_tests/scripts/closures/: closure_captures_global_variable.var  closure_captures_local_variable.var  closure_edits_local_variable.var  closure_in_variable.var  closure_used_in_other_closure.var  closure_used_in_other_closure_variable.var  self_capturing_closure.var
tests/all_tests/scripts/coercion/: boolean_to_double.var  boolean_to_int.var  boolean_to_uint.var  int_to_double.var  uint_to_double.var  uint_to_int.var
tests/all_tests/scripts/composite_types/: array.var  array_length.var  arrow_function.var  arrow_function_call.var  arrow_function_call_with_args.var  callable.var  function_call.var  lambda.var  lambda_call.var  member_access.var  object.var  object_length.var  subscript.var
tests/all_tests/scripts/composite_types_as_variables/: array.var  array_length.var  arrow_function.var  arrow_function_call.var  arrow_function_call_with_args.var  callable.var  function_call.var  lambda.var  lambda_call.var  member_access.var  object.var  object_length.var  subscript.var
tests/all_tests/scripts/destructuring/: array_destructure_half.var  array_empty_rest.var  array_for_loop.var  array_no_rest.var  array_no_rest_ranged.var  array_only_empty_rest.var  array_only_rest.var  array_rest.var  array_rest_ranged.var  object.var  object_destructure_first_last.var  object_destructure_half.var  object_for_loop.var  object_ranged.var
tests/all_tests/scripts/exceptions/: assign_an_exception.var  assign_an_exception2.var  deeply_nested_try_catch.var  function_catches_exception.var  nested_try_catch.var  simple_try_catch.var  throw_exception_from_function.var  triple_nested_try_catch.var  try_catch_no_throw.var  try_catch_returns_exception_from_catch.var  try_catch_returns_from_catch.var  try_catch_returns_from_try.var
tests/all_tests/scripts/expressions/: conditional_and.var  conditional_or.var  integer_literal.var  operator_precedence.var  sequence.var  ternary.var
tests/all_tests/scripts/fmt_strings/: empty_string.var  expression_text_expression.var  function_call.var  misc.var  mixed.var  newline.var  no_formatting.var  single_expression.var  text_expression_text.var
tests/all_tests/scripts/functions/: function_edits_global_variable.var  function_no_return.var  function_returns_argument.var  function_returns_shared_argument.var  simple_recursion.var
tests/all_tests/scripts/global_variables/: main_and_global_edit_global.var  main_edits_global.var  main_references_global.var
tests/all_tests/scripts/hoisting/: hoisted_single_file_function.var  two_hoisted_functions.var
tests/all_tests/scripts/object/: contains.var  keys.var  remove.var  set.var  to_array.var  values.var
(+454 files in other folders)
